[metadata]
name = gaftools
author = Arda Söylev, Samarendra Pani, Fawaz Dabbaghie and Tobias Marschall
author_email = 
url = 
description = Utility functions for GAF File
license = 
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Changelog = 

[options]
python_requires = >=3.7
packages = find:

[options.entry_points]
console_scripts =
    gaftools = gaftools.__main__:main

[options.extras_require]
dev =
    Cython
    pytest
    sphinx>=4.4
    sphinx-issues
    pysam-stubs
docs =
    sphinx-issues
    sphinx_better_subsection
